Fixed navigation on mobile

--- a/_scss/abstracts/_variables.scss
+++ b/_scss/abstracts/_variables.scss
@@ -1,6 +1,7 @@
 $primary: #333333;
 
 $breakpoints: (
+  xsmall: '350px',
   small: '767px',
   medium: '992px',
   large: '1199px'
